# adventofcode

./: .bazelrc  .dir-locals.el  .gitignore  BUILD.bazel  WORKSPACE  hie.yaml  p13.py  p3.py  p4.hs  p5.py  p6-2.py  shell.nix  stackage_snapshot.json
2015/: p10.py  p15.py  p2.hs  p2.py  p3.hs  p4.py  p5.hs  p6.py
2016/: aoc2016.cabal  p1a.hs  p2a.hs  p2b.hs  p3a.hs  p3b.hs  p4.hs  p5b.hs  p7.hs  p8.hs  p9.hs  p9a.hs  p9b.hs
2017/D1/: day1_1.hs  day1_2.hs
2017/D2/: D2.hs
2018/: aoc2018.cabal  shell.nix
2018/D1/: 2018d1  2018d1.hs
2018/D2/: 2018d2.hs  2018d2p2.hs
2018/D3/: D3.hs
2018/D4/: D4.hs
2019/: BUILD.bazel  Intcode.hs  aoc2019.cabal  shell.nix
2019/D1/: BUILD.bazel  D1.hs
2019/D10/: BUILD.bazel  D10.hs
2019/D2/: BUILD.bazel  D2.hs
2019/D3/: BUILD.bazel  D3.hs
2019/D4/: BUILD.bazel  D4.hs
2019/D5/: BUILD.bazel  D5.hs
2019/D6/: D6.hs
2019/D7/: BUILD.bazel  D7.hs
2019/D8/: D8.hs
2019/D9/: BUILD.bazel  D9.hs
Aoc2015/: Aoc2015.cabal  BUILD.bazel  p1.hs  p1.py  p12.py  p5.hs  p7.py
Aoc2015/D1/: D1.hs  D1.py
Aoc2015/D11/: p11.py
Aoc2015/D14/: p14.py
Aoc2015/D15/: p15.py
Aoc2015/D2/: D2.hs  D2.py
Aoc2015/D3/: D3.hs  D3.py
Aoc2015/D4/: D4.hs  p4.py
Aoc2015/D5/: D5.hs  p5.py
Aoc2015/D6/: p6-2.py  p6.py
Aoc2015/D8/: p8.py
Aoc2015/D9/: p9.py
Aoc2016/: Aoc2016.cabal  p1b.hs  p4.hs  p5a.hs  p6a.hs
Aoc2016/D1/: D1a.hs  D1b.hs
Aoc2016/D2/: D2.hs
Aoc2016/D3/: p3a.hs
Aoc2016/D9/: p9b.hs
Aoc2017/D3/: D3.hs  foo.org
Aoc2018/: Aoc2018.cabal  shell.nix
Aoc2019/: Aoc2019.cabal  BUILD.bazel  Intcode.hs  aoc2019.cabal  default.nix  shell.nix
Aoc2019/D1/: BUILD.bazel  D1.hs
Aoc2019/D10/: BUILD.bazel  D10.hs
Aoc2019/D2/: BUILD.bazel  D2.hs
Aoc2019/D3/: BUILD.bazel  D3.hs
Aoc2019/D4/: BUILD.bazel
Aoc2019/D5/: BUILD.bazel  D5.hs
Aoc2019/D6/: BUILD.bazel  D6.hs
Aoc2019/D7/: BUILD.bazel  D7.hs
Aoc2019/D8/: BUILD.bazel  D8.hs
Aoc2019/D9/: BUILD.bazel  D9.hs
Aoc2020/: BUILD.bazel  D1.hs
Aoc2022/: Aoc2022.cabal  CHANGELOG.md  LICENSE  shell.nix
Aoc2022/D1/: D1.hs
Aoc2022/D2/: D2.hs  D2b.hs
Aoc2022/D3/: D3.hs
Aoc2022/D4/: D4.hs
Aoc2022/D5/: D5.hs
Aoc2022/D6/: D6.hs
Aoc2022/D7/: D7.hs
Aoc2022/D8/: D8.hs
Aoc2023/: Aoc2023.cabal  flake.nix
Aoc2023/app/: Main.hs
Aoc2023/src/: D1.hs  D2.hs
Aoc2023/src/D1/: D1.hs
Aoc2024/: Aoc2024.cabal  flake.nix
Aoc2024/app/: Main.hs
Aoc2024/src/: D1.hs  D2.hs  D3.hs  D4.hs
builtin/: BUILD.bazel
nix/: sources.json
