package(default_visibility = ["//visibility:public"])

load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
    "haskell_library",
    "haskell_repl",
)

# You can add your own libraries with haskell_library.
# haskell_library(
#     name = "MY_LIBRARY_NAME",
#     src_strip_prefix = "src",
#     srcs = glob(['src/**/*.hs']),
#     deps = [
#         "base_pkg"
#     ],
# )

# An example binary using the Prelude module from the
# GHC base package, and zlib from stackage, to print the hello world.
# haskell_binary(
#     name = "example",
#     srcs = [":Example.hs"],
#     deps = [
#       "//builtin:base",
#       "@stackage//:zlib",
#     ],
# )

haskell_repl(
    name = "hie-bios",
    collect_data = False,
    deps = [
        "//Aoc2019:Intcode",
        "@stackage//:zlib",
    ],
)
