name:                aoc2016
version:             0.1.0.0
-- synopsis:
-- description:
-- license:             Apache-2.0
-- license-file:        LICENSE
author:              Benjamin Staffin
maintainer:          benley@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable aoc2016
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , MissingH >= 1.4
                     , regex-posix
                     , pureMD5
                     , bytestring
  -- hs-source-dirs:
  default-language:    Haskell2010
