cabal-version:       2.4

name:                aoc2019
version:             0.1.0.0
-- synopsis:
-- description:
-- license:             Apache-2.0
-- license-file:        LICENSE
author:              Benjamin Staffin
maintainer:          benley@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:  ChangeLog.md

library
        build-depends: base
                     , async
                     , containers >= 0.6.0.1
                     , dlist
                     , fgl
                     , split >= 0.2.3.3
                     , stm >= 2.5.0.0
                     , string-qq >= 0.0.2
                     , text >= 1.2.3.1
                     , transformers >= 0.5.6.2
        default-language: Haskell2010

-- executable aoc2019
--   main-is:             Main.hs
--   build-depends:       base
--   default-language:    Haskell2010
