cabal-version:       3.0

name:                aoc2019
version:             0.1.0.0
-- synopsis:
-- description:
-- license:             Apache-2.0
-- license-file:        LICENSE
author:              Benjamin Staffin
maintainer:          benley@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:  ChangeLog.md

common stuff
        build-depends: array >= 0.5.3.0
                     , base
                     , containers >= 0.6.0.1
                     , fgl
                     , split >= 0.2.3.3
                     , text >= 1.2.3.1
                     , string-qq
                     , text-show
        default-language: Haskell2010

library
        import: stuff
        exposed-modules: Intcode

executable d9
        import: stuff
        main-is: D9/D9.hs
        build-depends: aoc2019

-- executable aoc2019
--   main-is:             Main.hs
--   build-depends:       base
--   default-language:    Haskell2010
