cabal-version:       3.4
name:                Aoc2016
version:             0.1.0.0
author:              Benjamin Staffin
maintainer:          benley@gmail.com
build-type:          Simple

common aoc2016
    ghc-options: -Wall
    default-language:    Haskell2010
    build-depends: base
                 , MissingH >= 1.4
                 , regex-posix
                 , pureMD5
                 , bytestring
                 , split
                 , mtl
                 , megaparsec
                 -- , megaparsec >=5.3 && <6.0

executable d1a
    import:      aoc2016
    main-is:     D1/D1a.hs

executable d1b
    import:      aoc2016
    main-is:     D1/D1b.hs

executable d2
    import:      aoc2016
    main-is:     D2/D2.hs

executable p9a
    import:      aoc2016
    main-is:     p9a.hs
