cabal-version:      3.4
name:               Aoc2023
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/benley/adventofcode
license:            MIT
-- license-file:       LICENSE
author:             Benjamin Staffin
maintainer:         benley@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common deps
    default-language: GHC2021
    default-extensions: OverloadedStrings
    ghc-options: -Wall
    build-depends:    base ^>= 4.18.2
                    , text ^>= 2.0.2

executable d1
    import: deps
    main-is: D1/D1.hs
    hs-source-dirs: src
