cabal-version:      3.4
name:               Aoc2024
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/benley/adventofcode
license:            MIT
-- license-file:       LICENSE
author:             Benjamin Staffin
maintainer:         benley@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

data-dir: data

common deps
    default-language: GHC2021
    default-extensions: OverloadedStrings
    ghc-options: -Wall -Wmissing-home-modules
    build-depends:
        base ^>= 4.18.2
      , text ^>= 2.0.2
      , containers
      , text-icu
      , text-regex-replace

executable app
    import: deps
    main-is: Main.hs
    hs-source-dirs: app
    build-depends: Aoc2024

library
    import: deps
    hs-source-dirs: src
    exposed-modules:
        D1
        D2
        D3
    other-modules:
        Paths_Aoc2024
    autogen-modules:
        Paths_Aoc2024
